--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
+      <img src="anapovskiy_mazut_w1.png" alt="Анапский мазут">
     </div>
   </div>
 </section>
@@ -69,17 +69,26 @@
   <div class="container">
     <h2>Уникальность</h2>
     <div class="unique-grid">
-      <div class="unique-card">
-        <h3>Лимитированные модели</h3>
-        <p>Каждая модель — ограниченная серия. Никаких массовых копий. Только элита.</p>
+      <div class="car-card">
+        <img src="hohloma.png" alt="Хохлома">
+        <div class="car-info">
+          <h3>ХОХЛОМСКАЯ РОСПИСЬ</h3>
+          <p>Лимитированная расцветка (третяя фотография). Цена по договоренности.</p>
+        </div>
       </div>
-      <div class="unique-card">
-        <h3>Золотые диски</h3>
-        <p>Первая в мире модель с настоящими золотыми дисками (420000$).</p>
+      <div class="car-card">
+        <img src="gzhel.png" alt="Гжель">
+        <div class="car-info">
+          <h3>Гжель</h3>
+          <p>Первый лимитированный заказ для Мамаевой Марии. Кто успел — тот и съел.</p>
+        </div>
       </div>
-      <div class="unique-card">
-        <h3>Технология покраски</h3>
-        <p>Система “Style-Builder”: меняй цвет в реальном времени и сохраняй свой стиль.</p>
+      <div class="car-card">
+        <img src="ashkudishka.png" alt="Ашкудишка Личи">
+        <div class="car-info">
+          <h3>Ашкудишка Личи</h3>
+          <p>Цена 300000$. Встроенный кальян вместо подстаканников.</p>
+        </div>
       </div>
     </div>
   </div>
@@ -89,90 +98,78 @@
   <div class="container">
     <h2>Коллекция</h2>
     <div class="collection-grid">
-
       <div class="car-card">
-        <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
+        <img src="anapovskiy_mazut_w1.png" alt="Анапский мазут">
         <div class="car-info">
           <h3>Анапский мазут</h3>
-          <p>Цена: 420000$ (с золотыми дисками)</p>
+          <p>Цена 420000$ с золотыми дисками.</p>
         </div>
       </div>
-
       <div class="car-card">
-        <img src="zadumchivaya_sliva_w4.png" alt="Задумчивая слива">
+        <img src="zadumchivaya_sliva_w1.png" alt="Задумчивая слива">
         <div class="car-info">
           <h3>Задумчивая слива</h3>
-          <p>Цена начинается: 444444$</p>
+          <p>Цена от 444444$.</p>
         </div>
       </div>
-
       <div class="car-card">
-        <img src="hohloma_w4.png" alt="Хохломская роспись">
-        <div class="car-info">
-          <h3>Хохломская роспись</h3>
-          <p>Цена: 22228$</p>
-        </div>
-      </div>
-
-      <div class="car-card">
-        <img src="gzhel_w4.png" alt="Гжель">
-        <div class="car-info">
-          <h3>Гжель</h3>
-          <p>Цена по договоренности<br>Первый лимитированный заказ для Мамаевой Марии.</p>
-        </div>
-      </div>
-
-      <div class="car-card">
-        <img src="ashkudishka_w4.png" alt="Ашкудишка Личи 300 тяг">
-        <div class="car-info">
-          <h3>Ашкудишка Личи 300 тяг</h3>
-          <p>Цена: 300000$<br>Шедевр инженерии со встроенным кальяном.</p>
-        </div>
-      </div>
-
-      <div class="car-card">
-        <img src="cocacola_zero_w4.png" alt="CocaCola zero">
+        <img src="cocacola_zero_w1.png" alt="CocaCola zero">
         <div class="car-info">
           <h3>CocaCola zero</h3>
-          <p>Лимитированная коллекция для наших РППшниц.<br>"Хочешь есть - попей водички."<br>Цена: 239000$</p>
+          <p>Лимитированная коллекция. "Хочешь есть - попей водички." Цена 239000$.</p>
         </div>
       </div>
-
       <div class="car-card">
-        <img src="heroin_needle_w1.png" alt="Героиновая игла">
+        <img src="heroin_needle_w1.
+          png" alt="Героиновая игла">
         <div class="car-info">
           <h3>Героиновая игла</h3>
-          <p>Лимитированная коллекция под заказ.<br>"Райское наслаждение"<br>Цена: 670000$</p>
+          <p>Лимитированная коллекция. "Райское наслаждение". Цена 670000$.</p>
         </div>
       </div>
-
     </div>
   </div>
 </section>
 
+<!-- ====== STYLE BUILDER ====== -->
 <section id="style" class="luxury-section">
   <div class="container">
     <h2>Создай стиль</h2>
 
-<div class="style-preview">
-  <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
-  <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
-  <div id="colorOverlay" class="color-overlay"></div>
-</div>
+    <div class="style-builder">
 
-<select id="model">
-  <option value="anapovskiy_mazut">Анапский мазут</option>
-  <option value="zadumchivaya_sliva">Задумчивая слива</option>
-  <option value="gzhel">Гжель</option>
-  <option value="ashkudishka">Ашкудишка Личи</option>
-</select>
+      <div class="style-preview">
+        <div class="car-canvas">
+          <!-- цветная машина (фон) -->
+          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
 
-<select id="wheel">
-  <option value="1">Диски 1</option>
-  <option value="2">Диски 2</option>
-  <option value="3">Диски 3</option>
-  <option value="4">Диски 4</option>
-</select>
+          <!-- ч/б кузов -->
+          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
+
+          <!-- фильтр -->
+          <div id="colorOverlay" class="color-overlay"></div>
+        </div>
+      </div>
+
+      <div class="style-controls">
+        <label>
+          Модель
+          <select id="model">
+            <option value="anapovskiy_mazut">Анапский мазут</option>
+            <option value="zadumchivaya_sliva">Задумчивая слива</option>
+            <option value="gzhel">Гжель</option>
+            <option value="ashkudishka">Ашкудишка Личи</option>
+          </select>
+        </label>
+
+        <label>
+          Диски
+          <select id="wheel">
+            <option value="1">Диски 1</option>
+            <option value="2">Диски 2</option>
+            <option value="3">Диски 3</option>
+            <option value="4">Диски 4</option>
+          </select>
         </label>
 
         <label>
@@ -233,26 +230,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
