--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
       <div class="style-preview">
         <div class="car-canvas">
           <!-- цветная машина (фон) -->
-          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
+          <img id="carColor" class="carColor" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
 
           <!-- ч/б кузов -->
-          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
+          <img id="carMask" class="carMask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
 
           <!-- фильтр -->
-          <div id="colorOverlay" class="color-overlay"></div>
+          <div id="colorOverlay" class="colorOverlay"></div>
         </div>
       </div>
 
@@ -230,3 +230,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
