--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <img id="carMask" class="carMask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
 
           <!-- фильтр -->
-          <div id="colorOverlay" class="colorOverlay"></div>
+          <div id="colorOverlay" class="color-overlay"></div>
         </div>
       </div>
 
@@ -230,4 +230,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
