--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
     <div class="style-builder">
 
       <div class="style-preview">
-        <div class="car-canvas">
-          <!-- цветная машина (фон) -->
-          <img id="carColor" class="carColor" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
 
-          <!-- ч/б кузов -->
-          <img id="carMask" class="carMask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
+        <!-- ЦВЕТНАЯ БАЗА -->
+        <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png">
 
-          <!-- фильтр -->
-          <div id="colorOverlay" class="color-overlay"></div>
-        </div>
+        <!-- Ч/Б КУЗОВ -->
+        <img id="carMask" class="car-mask" src="anapovskiy_mazut.png">
+
+        <!-- ЦВЕТ -->
+        <div id="colorOverlay" class="color-overlay"></div>
+
       </div>
 
       <div class="style-controls">
@@ -230,5 +230,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
