--- a/index.html
+++ b/index.html
@@ -139,20 +139,11 @@
     <div class="style-builder">
 
 <div class="style-preview">
-
   <div class="car-canvas">
-
-    <!-- цветная база -->
-    <img id="carColor" class="layer color" src="anapovskiy_mazut_w1.png">
-
-    <!-- ч/б кузов -->
-    <img id="carMask" class="layer mask" src="anapovskiy_mazut.png">
-
-    <!-- цвет -->
-    <div id="colorOverlay" class="layer overlay"></div>
-
+    <img id="carColor" class="car-color" src="">
+    <img id="carMask" class="car-mask" src="">
+    <div id="colorOverlay" class="color-overlay"></div>
   </div>
-
 </div>
 
       <div class="style-controls">
