--- a/index.html
+++ b/index.html
@@ -138,11 +138,10 @@
 
     <div class="style-builder">
 
-<div class="style-preview">
-  <div class="car-canvas">
-    <img id="carColor" class="car-color" src="">
-    <div id="colorOverlay" class="color-overlay"></div>
-  </div>
+<div class="car-preview">
+  <img id="carColor" class="car-img" src="" alt="Цветная машина">
+  <img id="carMask" class="car-mask" src="" alt="Кузов маска">
+  <div id="colorOverlay" class="color-overlay"></div>
 </div>
 
       <div class="style-controls">
